--- a/package.json
+++ b/package.json
@@ -1,11 +1,9 @@
 {
-  "name": "mime-db",
+  "name": "mime-db2",
   "description": "Media Type Database",
-  "version": "1.13.0",
+  "version": "1.0.0",
   "contributors": [
-    "Douglas Christopher Wilson <doug@somethingdoug.com>",
-    "Jonathan Ong <me@jongleberry.com> (http://jongleberry.com)",
-    "Robert Kieffer <robert@broofa.com> (http://github.com/broofa)"
+    "Ismael Harun"
   ],
   "license": "MIT",
   "keywords": [
@@ -17,7 +15,7 @@
     "charset",
     "charsets"
   ],
-  "repository": "jshttp/mime-db",
+  "repository": "LaughingSun/mime-db2",
   "devDependencies": {
     "bluebird": "2.9.27",
     "co": "4.5.4",
